--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -4,6 +4,7 @@
         flex-direction: column;
         padding-top: 5rem;
         background-repeat: repeat;
+        height: 100vh;
     }
 
     .conteiner .texto{
